# trackball_r36s

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  install.sh  install_locally.sh  make_dist.sh  setup_deps.sh
src/: main.cpp
